tests/fixtures/invalid_syntax_error/main.py
# flake8: noqa
syntax error!
